examples/test/testpolicy2549.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2549
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key43: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value40
          key15: value40
          key12: value46
      podSelector:
        matchLabels:
          key11: value23
          key29: value32
          key42: value49
